--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -15,7 +15,7 @@ description='''${mod_description}'''
     modId="forge"
     mandatory=true
     versionRange="${forge_version_range}"
-    ordering="NONE"
+    ordering="AFTER"
     side="BOTH"
 
 
@@ -23,5 +23,5 @@ description='''${mod_description}'''
     modId="minecraft"
     mandatory=true
     versionRange="${minecraft_version_range}"
-    ordering="NONE"
+    ordering="AFTER"
     side="BOTH"
